# dng-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.fleet/: run.json
src/: dng_reader.rs  dng_writer.rs  ifd.rs  ifd_reader.rs  lib.rs  unprocessed_ifd.rs  yaml_dumper.rs
src/byte_order_rw/: byte_order_reader.rs  byte_order_writer.rs  mod.rs
src/exif/: README.md  example.yaml  exif.json  exif_ifd.json  exif_yaml.rs  mod.rs  tag_info_parser.rs
src/ifd_tag_data/: ifd.json  mod.rs  tag_info_parser.rs
src/ifd_tags/: exif.json  gps_info.json  mod.rs  tag_info_parser.rs
src/tags/: README.md  ifd.json  mod.rs
src/testdata/: test.dng
src/tiff/: byte_order_reader.rs  ifd.rs  mod.rs
src/util/: byte_order_reader.rs  byte_order_writer.rs  mod.rs
src/yaml/: dumper.rs  mod.rs  parser.rs
src/yaml/testdata/: axiom_beta_simulated.dcp  pentax_k30.dcp
