[package]
name = "dng"
description = "A pure rust library for reading / writing DNG files providing access to the raw data"
version = "1.0.0"
keywords = ["dng", "raw", "tiff", "ifd", "exif"]
categories = ["command-line-utilities", "multimedia::images", "multimedia::encoding", "multimedia::video"]
repository = "https://github.com/apertus-open-source-cinema/dng-rs"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.22", features = ["derive"] }
derivative = "2.2.0"
fraction = "0.12.1"
itertools = "0.10.5"
lazy-regex = "2.3.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.87"
serde_plain = "1.0.1"
textwrap = "0.16.0"
yaml-peg = "1.0.5"
